Mon Feb  8 22:08:22 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in: Link in the ccapi import library under windows.

	* krb5_16.def, krb5_32.def: Added a number of miscellaneous
 		functions to the DLL exports list so that things build
 		under Windows again.

1999-01-27  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in, configure.in: Move the responsibility for
		generating the Makefile in this directory to the top-level
		configure script.  The local configure.in script has been
		deleted.

Sat Dec  5 01:11:00 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* krb5_32.def: Fixed exports file to reflect new crypto library
		and related changes.

1998-05-26  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* krb5_32.def: Change the DLL export list to include
		krb5_auth_con_setrcache, krb5_get_server_rcache,
		krb5_cc_default_name, krb5_change_password,
		krb5_mcc_ops, and all of the Cygnus
		krb5_get_init_creds functions.  Remove the old libkadm
		functions, as they are no longer available.

Sun May 24 22:31:39 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (CLEANLIBS): Remove lib/kadm from the list of
		directories built in the windows build.

Wed Feb 18 16:04:58 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (thisconfigdir): Remove trailing slash.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Use AC_CONFIG_DIRS instead of CONFIG_DIRS, and
		remove use of DO_SUBDIRS.

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Wed Nov 19 10:33:19 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (clean-unix): Do not remove libraries here as the
	 	Makefile that created the symlink now removes it.

Tue Oct 21 23:29:18 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* win_glue.c: Add checks so that code doesn't bomb out if the
		version resource is missing a Title or Version record.

Fri Aug  1 22:03:24 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in, krb5.rc, version.rc: Add support for adding a